<resources>
    <string name="app_name">Elemental</string>
    <string name="Bmi"> bmi</string>
    <string name="Search">Search</string>
    <string name="Options">Options</string>
    <string name="Profile">Profile</string>
    <string name="Calendar">Calendar</string>
    <string name="Sport">Sport</string>
    <string name="Home">Home</string>
    <string name="BMIKalkulator">BMI Calculator</string>
    <string name="Weight">Your weight (kg):</string>
    <string name="Height">Your height (cm):</string>
    <string name="ButtonBMI">Calculate your BMI:</string>
    <string name="BMIresult">Your Result:</string>
    <string name="HomeWorkout">Home workout:</string>
    <string name="OutsideWorkout">Outside workout:</string>
    <string name="Description">The best app for your fitness journey</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email Address</string>
    <string name="passord">Password</string>
    <string name="login">Login</string>
    <string name="forgotpass">Forgot your password?</string>
    <string name="register">Register an account</string>
    <string name="changelife">Do you want to make a difference?</string>
    <string name="registerbutton">Register</string>
    <string name="Logout">Log out</string>
    <string name="resetPass">Reset your password</string>
    <string name="calves">Calves</string>
    <string name="walkingcalves">Walk forward and push your toe into the ground, lift your heel off the ground each step and tense your muscle repeat on each leg and walk forward slowly</string>
    <string name="walkingcalfraises">Walking Calf Raises</string>
    <string name="tiptoe">Tip Toe Walking</string>
    <string name="tiptoewalking">Point your toes into the ground. Slowly walk forward and backwards and keep your in the air as long as possible</string>
    <string name="Calfraises">Calf Raises</string>
    <string name="calfraisesexercise">Balance on the balls of your feet, lower the heels of your feet towards the ground and pause, then push through the balls of your feet</string>
    <string name="calvesbutton">Calves</string>
    <string name="quads">Quads</string>
    <string name="abdomin">Abdominals</string>
    <string name="chest">Chest</string>
    <string name="shoulders">Shoulders</string>
    <string name="traps">Traps</string>
    <string name="triceps">Triceps</string>
    <string name="hamstrings">Hamstrings</string>
    <string name="squat">Squat</string>
    <string name="squater">stand with your feet at shoulder-width apart. Flex your knees and hips and sit back into the squat while lowering your body</string>
    <string name="forwardlung">Forward lunges</string>
    <string name="forwardlunging">step forward with one leg,Lower your body until your knee nearly touches the ground.Push off the floor with your front foot until you return to the starting position and switch legs.</string>
    <string name="jumpsquat">Jump Squats</string>
    <string name="jumpsquating">Stand with your feet shoulder-width apart.Start by doing a regular squat, then jump up. When you land, lower your body back into the squat position.</string>
    <string name="crunches">Crunches</string>
    <string name="crunchinfo">Lay flat on your back with your knees bent and your feet flat on the ground. Raise your head and shoulders off the floor. Return to starting position and repeat.</string>
    <string name="legraises">Laying Leg Raises</string>
    <string name="legraisesinfo">Lay on your back. Keep your legs together and as straight as possible.Slowly raise your legs as high as you can, pause at this position, and then slowly lower your legs back down.</string>
    <string name="plank">Forearm Plank</string>
    <string name="plankinfo">Place forearms on the ground with your elbows bent at a 90° angle. Lift your belly off the floor and form a straight line from your heels to the crown of your head and hold</string>
    <string name="dips">Dips</string>
    <string name="dipsinfo">Hold your body with arms locked above the equipment. Lower your body slowly while leaning forward.Raise your body above the bars until your arms are locked.</string>
    <string name="pushup">Push Up</string>
    <string name="pushupinfo">Place your hands directly under shoulders,Flatten your back so your entire body is straight and slowly lower your body. Exhale as you push back to the starting position.</string>
    <string name="declinepushup">Decline Push-Up</string>
    <string name="declinepushupinfo">Put your hands slightly wider than shoulder-width.Slowly lower your body until your chest almost touches the ground.Raise your body until you almost lock your elbows.</string>
    <string name="Elevatedpike">Elevated Pike Press</string>
    <string name="Elevatedpikeinfo">Lower your head towards the floor by bending your elbows. Push through your hands and return to the starting pike position. Repeat</string>
    <string name="Elevatedpikeshoulder">Elevated Pike Shoulder Shrug</string>
    <string name="Elevatedpikeshoulderinfo">Slowly lower your body while keeping your elbows locked. Slowly raise your body back to the start position.</string>
    <string name="benchdip">Bench Dips</string>
    <string name="benchdipinfo">Grip the edge of the bench with your hands, Keep your feet together and legs straight.Lower your body straight down.Slowly press back up to the starting point.</string>
    <string name="barbellcalf">Barbell Calf Raises</string>
    <string name="barbellcalfinfo">Place the bar on your back.Extend your heels upwards while keeping your knees stationary, and pause at the contracted position. Slowly return to the starting position.</string>
    <string name="barbellsquat">Squat</string>
    <string name="barbellsquatinfo">Stand with your feet shoulder-width apart. Maintain the arch in your back. Bend your knees as you lower the weight without altering the form of your back until your hips are below your knees.</string>
    <string name="barbellcurtsy">Barbell Curtsy Lunge</string>
    <string name="barbellcurtsyinfo">Place the barbell on your back. Step your foot back and around while simultaneously bringing the weight down. Return to start and repeat on other leg.</string>
    <string name="barbellroll">Barbell Roll-Outs</string>
    <string name="barbellrollinfo">Hold the Barbell and kneel on the floor. Slowly roll the Barbell straight forward, stretching your body into a straight position. start slowly pulling yourself back to the starting position</string>
    <string name="barbelllandmine">Barbell Landmine Side Bend</string>
    <string name="barbelllandmineinfo">Stand straight and hold the end of the Barbell, Keep your hips and shoulders facing forward, bend to one side slowly. Return to the upright position. Switch hands and repeat.</string>
    <string name="barbelloverhead">Barbell Overhead Press</string>
    <string name="barbelloverheadinfo">Start the barbell across your upper chest below your chin. Raise the barbell upwards and pause at the contracted position above your head. Lower the weights back to starting position.</string>
    <string name="barbellbench">Barbell Bench Press</string>
    <string name="barbellbenchinfo">Lay flat on the bench with your feet on the ground. Lower the bar to your mid chest. Raise the bar until youve locked your elbows</string>
    <string name="inclinebarbellbench">Incline Barbell Bench</string>
    <string name="inclinebarbellbenchinfo">Position the bench between 30 and 45 degrees. Lower the bar to your mid chest. Raise the bar until youve locked your elbows.</string>
    <string name="barbellsilverback">Barbell Silverback Shrug</string>
    <string name="barbellsilverbackinfo">Bend forward at the hips with a slight bend in your knees, keeping your back straight. Engage your shoulder blades, as if you are trying to touch them together. Repeat</string>
    <string name="layingtriceps">Laying Triceps Extensions</string>
    <string name="layingtricepsinfo">Fully extend your elbows until the barbell is directly over your chest. Begin to flex your elbows and allow the barbell to nearly touch your forehead. Repeat</string>
    <string name="closegripbench">Close Grip Bench Press</string>
    <string name="closegripbenchinfo">hold the bench with a narrow grip, straighten your arms. Lower the bar to your lower-mid chest. Slowly raise the bar until youve locked your elbows.</string>
    <string name="close_drawer">Close navigation</string>
    <string name="open_drawer">Open navigation</string>
    <string name="submit">Submit</string>
    <string name="your_workouts">Your Workouts:</string>
    <string name="your_plans">Your Plans</string>
    <string name="last_month">Last Month</string>
    <string name="next_month">Next month</string>
    <string name="username">Username</string>
    <string name="pictureofgirlsquating">pictureofgirlsquating</string>
    <string name="girl_checking_phone">Girl checking phone</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="your_fitness_application">Your fitness application</string>
    <string name="get_goals">get goals</string>
    <string name="switch_lightmode">Switch Lightmode</string>
    <string name="reset_username">Reset Username</string>
    <string name="delete_account">Delete Account</string>
    <string name="workout_plan">Workout Plan</string>
    <string name="change_information">Change information</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_description">Edit Description</string>
    <string name="update">Update</string>
    <string name="edit_workout_plan">Edit workout plan</string>
    <string name="your_plan_title">Your plan Title</string>
    <string name="your_new_description">Your new description</string>
    <string name="your_description">Your description</string>
    <string name="save">save</string>
    <string name="delete">Delete</string>
    <string name="bmi_schema">BMI Schema</string>
    <string name="edit_your_bmi">Edit your BMI</string>
    <string name="profile">Welcome to your profile! Here lies all your workouts that you have created. If you wish to edit any of these workouts, just click on the desired workout and you will be sendt to a new page</string>
    <string name="bmichart_text">This picture shows you an indication of how healthy you are in terms of bodyweight. Though the BMI calculation is not always correct. For example the bmi takes in your raw weight, which mean that it does not take your muscle weight and only gives u an estimation of your bmi.</string>
    <string name="reset">Reset</string>
    <string name="age">Age</string>
    <string name="calorie_bmr">This page helps you to find out your calorie goals. By selecting your activity level and clicking the button you get an estimation of calorie levels</string>
    <string name="option_spinner">Option spinner of activity estimation</string>
    <string name="change_weight_and_height">Change weight and height</string>
    <string name="diet">Diet</string>
    <string name="bmr">The Basal Metabolic Rate (bmr) is the number of calories your body needs to perform your everyday activities. Which is then used to calculate the needs to either remain,lose or gain weight. Select your activity level below and get your bmr</string>
    <string name="logo">Logo</string>
    <string name="weight_wriabletext">Weight wriabletext</string>
    <string name="enter_your_height_in_cm_here">Enter your height in cm here</string>
    <string name="quads_section">Quads section</string>
    <string name="calves_section">Calves section</string>
    <string name="abdomin_section">Abdomin section</string>
    <string name="chest_section">Chest section</string>
    <string name="shoulder_setion">Shoulder setion</string>
    <string name="trap_section">Trap section</string>
    <string name="tricep_section">Tricep section</string>
</resources>