<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.OutsideWorkoutFragment">

    <!-- TODO: Update blank fragment layout -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/calves"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/calvespic"
                    android:contentDescription="@string/calves_section"
                    android:layout_width="match_parent"
                    android:layout_height="171dp"
                    android:layout_marginTop="15dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/calvespic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/quads"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/quadpic"
                    android:layout_width="match_parent"
                    android:layout_height="171dp"
                    android:contentDescription="@string/quads_section"
                    android:layout_marginTop="15dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/quadpic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/abdomin"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/abdominpic"
                    android:contentDescription="@string/abdomin_section"
                    android:layout_width="match_parent"
                    android:layout_height="171dp"
                    android:layout_marginTop="15dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/abdominalrealpic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/chest"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/chestpic"
                    android:layout_width="match_parent"
                    android:layout_height="171dp"
                    android:contentDescription="@string/chest_section"
                    android:layout_marginTop="15dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/chestrealpic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/shoulders"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/shoulderpic"
                    android:contentDescription="@string/shoulder_setion"
                    android:layout_width="match_parent"
                    android:layout_height="171dp"
                    android:layout_marginTop="15dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/shoulderpicreal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/traps"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/trappic"
                    android:contentDescription="@string/trap_section"
                    android:layout_width="match_parent"
                    android:layout_height="171dp"
                    android:layout_marginTop="15dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/trapspic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/triceps"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/triceppic"
                    android:layout_width="match_parent"
                    android:layout_height="171dp"
                    android:contentDescription="@string/tricep_section"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="125dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/triceppic" />

            </LinearLayout>

        </LinearLayout>



</androidx.core.widget.NestedScrollView>