<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeWorkout.AbdominalHomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crunches"
                android:textAlignment="center"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                >

                <TextView
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/crunchinfo"
                    android:textAlignment="center"
                    android:textSize="13sp"
                    />

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:src="@drawable/crunches" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legraises"
                android:textAlignment="center"
                android:textSize="12sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp">

                <TextView
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/legraisesinfo"
                    android:textAlignment="center"
                    android:textSize="13sp"
                    />

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:src="@drawable/legraise" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plank"
                android:textAlignment="center"
                android:textSize="12sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp">

                <TextView
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/plankinfo"
                    android:textAlignment="center"
                    android:textSize="13sp"
                    />

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:src="@drawable/plank" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</FrameLayout>